[24.03.2019] Added cards for categories, created datail page for universal clocthes, made product variations field required in admin.

--- a/bombay/myshop/static/myshop/css/default.css
+++ b/bombay/myshop/static/myshop/css/default.css
@@ -3968,7 +3968,7 @@ tbody.collapse.in {
     color: #555; }
   @media (max-width: 767px) {
     .navbar-default .navbar-nav .open .dropdown-menu > li > a {
-      color: #777; }
+      color: #fff; }
       .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
         color: #333;
         background-color: transparent; }
