--- a/bombay/myshop/templates/myshop/pages/footer.html
+++ b/bombay/myshop/templates/myshop/pages/footer.html
@@ -59,6 +59,9 @@
 		<div id="map"></div>
 	</div>
 </div>
+<div class="container" style=" bottom: 5px;">
+	<h4>2011-2019 bombayshop.com.ua</h4>
+</div>
 </div>
 {% get_current_language as LANGUAGE_CODE %}
 {% addtoblock "js" %}
