--- a/bombay/myshop/templates/myshop/pages/navbar.html
+++ b/bombay/myshop/templates/myshop/pages/navbar.html
@@ -26,7 +26,12 @@
 						</ul>
  						<ul class="nav navbar-nav">
 							<li>
-						<a href="mailto:india_na@ukr.net" style="padding-top: 5px;"><h4><i class="fa fa-envelope"></i>&nbsp;india_na@ukr.net</h4></a>
+						<a href="mailto:india_na@ukr.net" style="padding-top: 5px;"><h5><i class="fa fa-envelope"></i>&nbsp;india_na@ukr.net</h5></a>
+						</li>
+						</ul>
+						<ul class="nav navbar-nav">
+							<li>
+						<h5 style="padding-top: 5px; color: #777"><i class="fa fa-clock-o"></i>&nbsp;ПН-ПТ 9.00-17.00, СБ 10.00-12.00</h5>
 						</li>
 						</ul>
 					<ul class="nav navbar-nav navbar-right">
@@ -52,21 +57,26 @@
 			{% include "shop/navbar/search-form.html" with search_form_classes="shop-search-form navbar-form" %}
 		</div>
 	</div>
+    <script>
+	document.querySelector('.navbar-toggle').addEventListener('click', function() {
+		$('.navbar-collapse').toggleClass('collapse');
+	});
+	</script>
 
 	{% addtoblock "css" %}<link href="{% sass_src 'myshop/css/navbar.scss' %}" rel="stylesheet" type="text/css" />{% endaddtoblock %}
 
 	{% addtoblock "js" %}<script src="{% static 'node_modules/angular-ui-bootstrap/ui-bootstrap-tpls.min.js' %}"></script>{% endaddtoblock %}
 	{% add_data "ng-requires" "ui.bootstrap" %}
 
-	{% addtoblock "js" %}<script src="{% static 'myshop/js/navbar.js' %}" type="text/javascript"></script>{% endaddtoblock %}
-	{% add_data "ng-requires" "myshop.navbar" %}
+	{# addtoblock "js" %}<script src="{% static 'myshop/js/navbar.js' %}" type="text/javascript"></script>{% endaddtoblock #}
+	{# add_data "ng-requires" "myshop.navbar" #}
 
 {% endblock navbar %}
 
 {% block navbar-nav %}
 
 <div class="row" style="margin-top: 3%">
-	<div class="col-xs-12 col-sm-3 col-lg-2">
+	<div class="hidden-xs col-sm-3 col-lg-2">
 		<a href="/">
 			<img class="brand-logo" src="{% static 'shop/bombay-shop-logo.png' %}" alt="Bombay-SHOP"
 				 height="62"/>
@@ -76,6 +86,4 @@
 		{{ block.super }}
 	</div>
 </div>
-
-
 {% endblock %}
