--- a/bombay/myshop/templates/myshop/products/catalog-product-media.html
+++ b/bombay/myshop/templates/myshop/products/catalog-product-media.html
@@ -1,4 +1,10 @@
 {% load thumbnail %}
 {% thumbnail product.sample_image 244x244  as thumb %}
 {% thumbnail product.sample_image 488x488  as thumb2 %}
-<img class="img-responsive" src="{{ thumb.url }}" width="{{ thumb.width }}" height="{{ thumb.height }}" srcset="{{ thumb.url }} 1x, {{ thumb2.url }} 2x" />
+{% ifnotequal  product.discount "- 0 %" %}
+<h3 style="position: absolute; color: #fff; background-color: #016d8b; border: 2px solid #fff; padding: 4px; top: 0px;
+  right: 16px;"><em><strong>{{ product.discount }}</strong></em></h3>
+{% endifnotequal %}
+<div style="min-height: 244px;">
+<img class="img-responsive" style="margin-top: 2em;" src="{{ thumb.url }}" width="{{ thumb.width }}" height="{{ thumb.height }}" srcset="{{ thumb.url }} 1x, {{ thumb2.url }} 2x" />
+</div>
