--- a/shop/static/shop/css/product-gallery.scss
+++ b/shop/static/shop/css/product-gallery.scss
@@ -1,21 +1,37 @@
-bsp-scrollpanel {
-	ul {
-		margin: 0;
-		padding: 5px;
-		display: block;
-		overflow-x: hidden;
-		list-style-type: none;
-		white-space: nowrap;
-		margin-left: 20px;
-		transition: margin-left 0.5s;
-
-		li {
-			display: inline-block;
-			margin: 0 5px 0 0;
-			width: 200px;
-			overflow: auto;
-			white-space: initial;
-			@import "product-figure";
-		}
-	}
+bsp-scrollpanel ul {
+  margin: 0;
+  padding: 5px;
+  display: block;
+  overflow-x: hidden;
+  list-style-type: none;
+  white-space: nowrap;
+  margin-left: 20px;
+  transition: margin-left 0.5s;
+  li {
+    display: inline-block;
+    margin: 0 5px 0 0;
+    width: 200px;
+    overflow: auto;
+    white-space: initial;
+    figure {
+      border: 1px solid #ddd;
+      background: #fff;
+      border-radius: 4px;
+      padding: 10px;
+      min-height: 470px;
+      position: relative;
+      a {
+        &:hover, &:active {
+          text-decoration: none;
+        }
+      }
+      h4 {
+        min-height: 38px;
+      }
+      figcaption {
+        margin-top: 5px;
+        min-height: 50px;
+      }
+    }
+  }
 }
