--- a/shop/static/shop/css/product-list.scss
+++ b/shop/static/shop/css/product-list.scss
@@ -30,107 +30,119 @@
   margin-top: 15px !important;
 }
 
+.box-card {
+  max-width:80%;
+  height: 30em;
+  margin-bottom: 2em;
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(143,143,143,1);
+  -moz-box-shadow: 10px 10px 5px 0px rgba(143,143,143,1);
+  box-shadow: 10px 10px 5px 0px rgba(143,143,143,1);
+  background-color: #fff;
+}
+
+
 .box {
   border-radius: 5px;
   overflow: hidden;
   position: relative;
   z-index: 1;
   transition: all 0.3s ease 0s;
-  &:after {
-    content: '';
-    background: linear-gradient(to right, #337ab7, #016d8b);
-    height: 20px;
-    border-radius: 5px 5px 0 0;
-    position: absolute;
-    bottom: -20px;
-    right: 30px;
-    left: 30px;
-    z-index: 1;
-    transition: all 0.3s ease 0s;
-  }
-  &:hover:after {
-    bottom: 0;
-  }
-  img {
-    width: 100%;
-    height: auto;
-    transition: all 0.3s ease 0s;
-  }
-  &:hover img {
-    opacity: 0.7;
-
-    transform: scale(1.2);
-  }
-  .box-content {
-    background-color: #fff;
-    border-radius: 5px;
-    overflow: hidden;
-    position: absolute;
-    left: 30px;
-    right: 30px;
-    bottom: 100%;
-    z-index: 2;
-    transition: all 0.3s ease 0s;
-  }
-  &:hover .box-content {
-    bottom: 66px;
-  }
-  .title {
-    color: #fff;
-    background: linear-gradient(to right, #337ab7, #016d8b);
-    padding: 10px;
-    margin: 0;
-  }
-  .post {
-    color: #016d8b;
-    font-size: 18px;
-    font-weight: 400;
-    text-transform: capitalize;
-    margin: 0 10px 5px;
-    display: block;
-  }
-  .icon {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    position: absolute;
-    bottom: 25px;
-    right: 40px;
-    li {
-      margin-right: 10px;
-      display: inline-block;
-      transform: translateY(100px);
-      transition: all 0.3s ease 0.15s;
-      &:last-child {
-        margin-right: 0;
-        transition: all 0.3s ease 0.3s;
-      }
-    }
-  }
-  &:hover .icon li {
-    transform: translateY(0);
-  }
-  .icon li a {
-    color: #016d8b;
-    background-color: #fff;
-    font-size: 18px;
-    text-align: center;
-    line-height: 30px;
-    height: 35px;
-    width: 35px;
-    border: 2px solid #016d8b;
-    border-radius: 50%;
-    display: block;
-    transition: all 0.3s ease 0s;
-    &:hover {
-      color: #fff;
-      background-color: #016d8b;
-      border-color: #fff;
-      box-shadow: 0 0 5px #000;
-    }
-  }
 }
-
+.box:after {
+  content: '';
+  background: linear-gradient(to right, #337ab7, #016d8b);
+  height: 20px;
+  border-radius: 5px 5px 0 0;
+  position: absolute;
+  bottom: -20px;
+  right: 30px;
+  left: 30px;
+  z-index: 1;
+  transition: all 0.3s ease 0s;
+}
+.box:hover:after {
+  bottom: 0;
+}
+.box img {
+  width: 100%;
+  height: auto;
+  transition: all 0.3s ease 0s;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.box:hover img {
+  opacity: 0.7;
+}
+.box .box-content {
+  background-color: #fff;
+  border-radius: 5px;
+  overflow: hidden;
+  position: absolute;
+  left: 30px;
+  right: 30px;
+  bottom: 100%;
+  z-index: 2;
+  transition: all 0.3s ease 0s;
+}
+.box:hover .box-content {
+  bottom: 66px;
+}
+.box .title {
+  color: #fff;
+  background: linear-gradient(to right, #337ab7, #016d8b);
+  padding: 10px;
+  margin: 0;
+}
+.box .post {
+  color: #016d8b;
+  font-size: 18px;
+  font-weight: 400;
+  text-transform: capitalize;
+  margin: 0 10px 5px;
+  display: block;
+}
+.box .icon {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  position: absolute;
+  bottom: 25px;
+  right: 40px;
+}
+.box .icon li {
+  margin-right: 10px;
+  display: inline-block;
+  transform: translateY(100px);
+  transition: all 0.3s ease 0.15s;
+}
+.box .icon li:last-child {
+  margin-right: 0;
+  transition: all 0.3s ease 0.3s;
+}
+.box:hover .icon li {
+  transform: translateY(0);
+}
+.box .icon li a {
+  color: #016d8b;
+  background-color: #fff;
+  font-size: 18px;
+  text-align: center;
+  line-height: 30px;
+  height: 35px;
+  width: 35px;
+  border: 2px solid #016d8b;
+  border-radius: 50%;
+  display: block;
+  transition: all 0.3s ease 0s;
+}
+.box .icon li a:hover {
+  color: #fff;
+  background-color: #016d8b;
+  border-color: #fff;
+  box-shadow: 0 0 5px #000;
+}
 @media only screen and (max-width: 990px) {
   .box {
     margin-bottom: 30px;
