--- a/shop/templates/shop/catalog/product-figure.html
+++ b/shop/templates/shop/catalog/product-figure.html
@@ -4,7 +4,9 @@
 <figure>
 	<a href="{{ product.product_url }}" class="text-center">
 		<div {% if ng %} ng-bind-html="product.media"{% endif %}>{{ product.media }}</div>
-		<h4>{{ product.product_name }}</h4>
+		<div style="min-height: 5em;">
+			<h4 >{{ product.product_name|safe }}</h4>
+		</div>
 	</a>
 	<figcaption>
 		<div>
