--- a/bombay/myshop/static/myshop/css/default.css
+++ b/bombay/myshop/static/myshop/css/default.css
@@ -3809,9 +3809,7 @@ tbody.collapse.in {
       float: none;
       width: auto;
       margin-top: 0;
-      background-color: transparent;
-      border: 0;
-      box-shadow: none; }
+      border: 0;}
       .navbar-nav .open .dropdown-menu > li > a,
       .navbar-nav .open .dropdown-menu .dropdown-header {
         padding: 5px 15px 5px 25px; }
@@ -3967,8 +3965,6 @@ tbody.collapse.in {
     background-color: #e7e7e7;
     color: #555; }
   @media (max-width: 767px) {
-    .navbar-default .navbar-nav .open .dropdown-menu > li > a {
-      color: #fff; }
       .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
         color: #333;
         background-color: transparent; }
