--- a/bombay/myshop/templates/myshop/pages/footer.html
+++ b/bombay/myshop/templates/myshop/pages/footer.html
@@ -20,11 +20,11 @@
 					<h4><i class="fa fa-phone"></i>&nbsp;+380939227227</h4>
 				</li>
 				<li>
-					<h4><a href="mailto:india_na@ukr.net"><i class="fa fa-envelope"></i>&nbsp;india_na@ukr.net</a>
-					</h4>
+					<h4><a href="mailto:india_na@ukr.net"><i class="fa fa-envelope"></i>&nbsp;india_na@ukr.net</a></h4>
 				</li>
 			</ul>
 		</div>
+		<h4>2011-2019 bombayshop.com.ua</h4>
 	</div>
 	<div class="col-sm-6 col-md-4 col-lg-4"> <!-- Contact us form -->
 		<!-- Button trigger modal -->
@@ -58,9 +58,6 @@
 		</div>
 		<div id="map"></div>
 	</div>
-</div>
-<div class="container" style=" bottom: 5px;">
-	<h4>2011-2019 bombayshop.com.ua</h4>
 </div>
 </div>
 {% get_current_language as LANGUAGE_CODE %}
