--- a/shop/templates/shop/catalog/product-figure.html
+++ b/shop/templates/shop/catalog/product-figure.html
@@ -16,6 +16,7 @@
 			{% endifnotequal %}
 			<h3 style="color: #016d8b;">{{ product.price }}</h3>
 		</div>
+		{% block size_range %}
 		{% if product.size_range %}
 		<div>
 			<h5> <strong>{% trans "Available sizes" %}: </strong>
@@ -23,6 +24,7 @@
 			</h5>
 		</div>
 		{% endif %}
+		{% endblock size_range %}
 	</figcaption>
 </figure>
 {% endangularjs %}
