--- a/shop/templates/shop/catalog/product-gallery.html
+++ b/shop/templates/shop/catalog/product-gallery.html
@@ -1,4 +1,4 @@
-{% load i18n static sekizai_tags sass_tags %}
+{% load i18n djng_tags static sekizai_tags sass_tags %}
 
 {% addtoblock "css" %}<link href="{% sass_src 'node_modules/angular-bootstrap-plus/src/scrollpanel/scrollpanel.scss' %}" rel="stylesheet" type="text/css" />{% endaddtoblock %}
 {% addtoblock "js" %}<script src="{% static 'node_modules/angular-bootstrap-plus/src/scrollpanel/scrollpanel.js' %}" type="text/javascript"></script>{% endaddtoblock %}
@@ -8,15 +8,36 @@
 
 <bsp-scrollpanel>
 	<ul>{% for product in products %}
-		<li>{% include "shop/catalog/product-figure.html" %}</li>
+		<li>
+			{% angularjs ng %}
+			<figure>
+				<a href="{{ product.product_url }}" class="text-center">
+					<div {% if ng %} ng-bind-html="product.media" {% endif %}>{{ product.media }}</div>
+					<div style="min-height: 5em;">
+						<h4>{{ product.product_name|safe }}</h4>
+					</div>
+				</a>
+				<figcaption>
+					<div>
+						<strong>{% trans "Price" %}: </strong>
+						{% ifnotequal product.discount "- 0 %" %}
+						<strike>{{ product.price_without_discount }}</strike>
+						{% endifnotequal %}
+						<h3 style="color: #016d8b;">{{ product.price }}</h3>
+					</div>
+				</figcaption>
+			</figure>
+			{% endangularjs %}
+		</li>
 	{% endfor %}</ul>
 </bsp-scrollpanel>
 
 <script id="scrollpanel/bsp-scrollpanel.tmpl.html" type="text/ng-template">
+	<ng-transclude></ng-transclude>
 <panel-control class="left ">
 	<span class="glyphicon glyphicon-chevron-left"></span>
 </panel-control>
-<ng-transclude></ng-transclude>
+
 <panel-control class="right">
 	<span class="glyphicon glyphicon-chevron-right"></span>
 </panel-control>
