[06.04.2019] Partially fixed mobile version.

--- a/bombay/myshop/templates/myshop/pages/footer.html
+++ b/bombay/myshop/templates/myshop/pages/footer.html
@@ -24,7 +24,7 @@
 				</li>
 			</ul>
 		</div>
-		<h4>2011-2019 bombayshop.com.ua</h4>
+		<h4 class="visible-md visible-lg"><br/>2011-2019 bombayshop.com.ua</h4>
 	</div>
 	<div class="col-sm-6 col-md-4 col-lg-4"> <!-- Contact us form -->
 		<!-- Button trigger modal -->
@@ -58,6 +58,7 @@
 		</div>
 		<div id="map"></div>
 	</div>
+	<div class="visible-xs visible-sm text-center"><h4 class="">2011-2019 bombayshop.com.ua</h4></div>
 </div>
 </div>
 {% get_current_language as LANGUAGE_CODE %}
