--- a/shop/static/shop/css/product-list.scss
+++ b/shop/static/shop/css/product-list.scss
@@ -147,6 +147,8 @@
   .box {
     margin-bottom: 30px;
   }
+  .box .box-card {
+    max-width: 100%;}
   .box .box-content {
     position:inherit
   }
