--- a/bombay/myshop/templates/myshop/catalog/clothes-detail.html
+++ b/bombay/myshop/templates/myshop/catalog/clothes-detail.html
@@ -12,10 +12,10 @@
 <div class="container">
 	<div class="row product-detail">
 		<div class="col-xs-12 col-md-12">
-			<div class="col-xs-8 col-md-8">
-				<h1>{{ product.product_name|safe }}</h1>
+			<div class="hidden-xs col-md-8">
+					<h1>{{ product.product_name|safe }}</h1>
 			</div>
-			<div class="col-xs-4 col-md-4">
+			<div class=" col-md-4">
 				{% if product.unit_price != product.price_without_discount %}
 				<div class="promoBox">
 					<aside><h3>{{ product.discount }}</h3></aside>
@@ -25,6 +25,7 @@
 					{% endif %}
 					<h3 style="color: red;">{{ product.unit_price }}</h3>
 					<p><del>{{ product.price_without_discount }}</del></p>
+					<h2 class="visible-xs">{{ product.product_name|safe }}</h2>
 				</div>
 				{% else %}
 				<div class="promoBox">
@@ -54,7 +55,7 @@
 					</a>
 				</div>
 			</div>
-		<div class="col-md-5">
+		<div class="col-xs-12 col-md-5">
 			{% include "myshop/catalog/clothes-add2cart.html" %}
 
 			<table class="table" style="background-color: #fff;">
