--- a/bombay/myshop/templates/myshop/cart/static.html
+++ b/bombay/myshop/templates/myshop/cart/static.html
@@ -4,7 +4,7 @@
 {% block shop-cart-tbody %}
 	<tbody>
 	{% for cart_item in cart.items %}
-		<tr>
+		<tr class="double-border">
 			<td rowspan="2" class="text-center">
 				<p>{{ cart_item.quantity }}</p>
 				<p class="text-left">
