--- a/shop/templates/shop/cart/static.html
+++ b/shop/templates/shop/cart/static.html
@@ -53,7 +53,7 @@
 		{% include 'shop/cart/extra-row.html' with ng=1 %}
 		</tr>
 		<tr class="double-border">
-			<td colspan="2" class="no-border"></td>
+			<td class="hidden-xs" colspan="2" class="no-border"></td>
 			<td class="text-right">
 				<h4><strong>{% trans "Total" %}</strong></h4>
 			</td>
