--- a/bombay/myshop/static/myshop/css/product-detail.css
+++ b/bombay/myshop/static/myshop/css/product-detail.css
@@ -8514,7 +8514,8 @@ shop-auth-form .ng-invalid.ng-touched {
 	position: relative;
 	margin: 5px;
 	padding: 10px;
-	width: 300px;
+	min-width: 250px;
+	max-width: 300px;
     border: 2px solid #ddd;
 	-webkit-border-radius: 8px;
 			border-radius: 8px;
