--- a/bombay/myshop/templates/myshop/catalog/clothes-detail.html
+++ b/bombay/myshop/templates/myshop/catalog/clothes-detail.html
@@ -34,11 +34,12 @@
 					<h4 style="color: #4f85bb">{{ product.get_promo_option_display }}</h4>
 					{% endif %}
 					<h3 style="color: #4f85bb;">{{ product.unit_price }}</h3>
+					<h2 class="visible-xs">{{ product.product_name|safe }}</h2>
 				</div>
 				{% endif %}
 			</div>
 			</div>
-		<div class="col-xs-2 col-md-1 thumbnails" >
+		<div class="col-xs-12 col-md-1 thumbnails" >
 				{% for img in product.images.all %}
 				{% thumbnail img 150x150 as thumb %}
 				<a href="{{ img.url }}" data-standard="{{ img.url }}">
@@ -50,7 +51,9 @@
 		<div class="images col-xs-12 col-md-6 text-center">
 				<div class="easyzoom easyzoom--overlay easyzoom--with-thumbnails is-ready">
 					<a href="{{ product.images.all.0.url }}">
-						<img src="{{ product.images.all.0.url }}" style="max-height: 46em; max-width: 36em;"
+						<img src="{{ product.images.all.0.url }}" class="hidden-xs" style="max-height: 46em; max-width: 36em;"
+							 alt="{{ product.product_name }}">
+						<img src="{{ product.images.all.0.url }}" class="visible-xs hidden-sm" style="max-height: 30em; max-width: 20em;"
 							 alt="{{ product.product_name }}">
 					</a>
 				</div>
@@ -118,7 +121,15 @@
 		<div class="col-xs-12 col-md-12" style="margin-top: 2%; padding-top: 2%; background-color: #fff;  border-radius: 4px" >
 			{{ product.description|safe }}
 		</div>
-	</div>
+	{% get_current_language as lang%}
+	{% if lang == "uk" %}
+	<div class="col-xs-12 text-center"><a class="btn btn-primary btn-block text-center" href="/uk/rozmirna-sitka/" style="max-width: 10em;">Розмірна сітка</a></div>
+	{% else %}
+	<div class="col-xs-12 text-center"><a class="btn btn-primary btn-block text-center" href="/ru/razmernaya-setka/" style="max-width: 10em;">Размерная сетка</a></div>
+	{% endif %}
+
+</div>
+
 </div>
 
 {% endblock main-content %}
