--- a/bombay/myshop/templates/myshop/catalog/commodity-detail.html
+++ b/bombay/myshop/templates/myshop/catalog/commodity-detail.html
@@ -12,10 +12,10 @@
 <div class="container">
 	<div class="row product-detail">
 		<div class="col-xs-12 col-md-12">
-			<div class="col-xs-8 col-md-8">
-				<h1>{{ product.product_name|safe }}</h1>
+			<div class="hidden-xs col-md-8">
+					<h1>{{ product.product_name|safe }}</h1>
 			</div>
-			<div class="col-xs-4 col-md-4">
+			<div class=" col-md-4">
 				{% if product.unit_price != product.price_without_discount %}
 				<div class="promoBox">
 					<aside><h3>{{ product.discount }}</h3></aside>
@@ -25,6 +25,7 @@
 					{% endif %}
 					<h3 style="color: red;">{{ product.unit_price }}</h3>
 					<p><del>{{ product.price_without_discount }}</del></p>
+					<h2 class="visible-xs">{{ product.product_name|safe }}</h2>
 				</div>
 				{% else %}
 				<div class="promoBox">
@@ -33,11 +34,12 @@
 					<h4 style="color: #4f85bb">{{ product.get_promo_option_display }}</h4>
 					{% endif %}
 					<h3 style="color: #4f85bb;">{{ product.unit_price }}</h3>
+					<h2 class="visible-xs">{{ product.product_name|safe }}</h2>
 				</div>
 				{% endif %}
 			</div>
 			</div>
-		<div class="col-xs-2 col-md-1 thumbnails" >
+		<div class="col-xs-12 col-md-1 thumbnails" >
 				{% for img in product.images.all %}
 				{% thumbnail img 150x120 as thumb %}
 				<a href="{{ img.url }}" data-standard="{{ img.url }}">
@@ -49,12 +51,14 @@
 		<div class="images col-xs-12 col-md-6">
 				<div class="easyzoom easyzoom--overlay easyzoom--with-thumbnails is-ready pull-right">
 					<a href="{{ product.images.all.0.url }}">
-						<img src="{{ product.images.all.0.url }}" style="max-height: 46em; max-width: 36em;"
+						<img src="{{ product.images.all.0.url }}" class="hidden-xs" style="max-height: 46em; max-width: 36em;"
+							 alt="{{ product.product_name }}">
+						<img src="{{ product.images.all.0.url }}" class="visible-xs hidden-sm" style="max-height: 30em; max-width: 20em;"
 							 alt="{{ product.product_name }}">
 					</a>
 				</div>
 			</div>
-		<div class="col-md-5">
+		<div class="col-md-5 col-xs-12">
 			{% include "myshop/catalog/commodity-add2cart.html" %}
 
 			<table class="table" style="background-color: #fff;">
