--- a/shop/templates/shop/cart/editable.html
+++ b/shop/templates/shop/cart/editable.html
@@ -12,9 +12,11 @@
 {% page_url "shop-watch-list" as shop_watch_list_url %}{% if not shop_watch_list_url %}{% url "shop-watch-list" as shop_watch_list_url %}{% endif %}
 
 {% block shop-cart-table %}
-<table shop-cart endpoint="{% url 'shop:cart-list' %}" class="table table-hover">
+<table shop-cart endpoint="{% url 'shop:cart-list' %}" class="table table-hover col-xs-12">
 	<!-- content is rendered via ng-template "shop/cart.html" -->
 </table>
+
+<h3 ng-show="cart.total.split(',')[0] < 200">{% trans "Minimal cart total has to be over 200 UAH." %}</h3>
 {% endblock shop-cart-table %}
 
 <script id="shop/cart.html" type="text/ng-template">
@@ -22,7 +24,7 @@
 	<thead ng-if="cart.num_items>0">
 		<tr>
 			<th class="col-xs-2 col-md-1 text-center">{% trans "Quantity" %}</th>
-			<th class="col-xs-7 text-center">{% trans "Product" %}</th>
+			<th class="col-xs-5 text-center">{% trans "Product" %}</th>
 			<th class="col-xs-1 text-right">{% trans "Unit Price" %}</th>
 			<th class="col-xs-1 col-md-2 text-right">{% trans "Total" %}</th>
 			<th class="col-xs-1"></th>
@@ -33,7 +35,7 @@
 
 {% block shop-cart-tbody %}
 	<tbody>
-		<tr shop-cart-item ng-repeat="cart_item in cart.items">
+		<tr style="border-bottom-style: solid" shop-cart-item ng-repeat="cart_item in cart.items">
 			<!-- content is rendered via ng-template "shop/cart-item.html" -->
 		</tr>
 	</tbody>
@@ -42,7 +44,7 @@
 {% block shop-cart-tfoot %}
 	<tfoot ng-show="cart.num_items>0">
 		<tr>
-			<td colspan="2" rowspan="99">
+			<td class="hidden-xs" colspan="2" rowspan="99">
 				{% if instance.left_extension %}{% render_plugin instance.left_extension %}{% endif %}
 			</td>
 			<td class="text-right"><strong>{% trans "Subtotal" %}</strong></td>
@@ -59,12 +61,13 @@
 			<td class="text-right text-nowrap"><h4><strong ng-bind="cart.total"><!-- Total --></strong></h4></td>
 			<td></td>
 		</tr>
-		<tr class="no-border">
-			<td colspan="3" rowspan="0">
+		<tr ng-show="cart.total.split(',')[0] >= 200" class="no-border">
+			<td  colspan="3" rowspan="0">
 				{% if instance.right_extension %}{% render_plugin instance.right_extension %}{% endif %}
 			</td>
 		</tr>
 	</tfoot>
+
 {% endblock shop-cart-tfoot %}
 </script>
 
