--- a/shop/static/shop/css/product-list.scss
+++ b/shop/static/shop/css/product-list.scss
@@ -24,6 +24,9 @@
       min-height: 50px;
     }
   }
+  .pict-frame {
+    min-height: 244px;
+  }
 }
 
 .pagination {
@@ -143,21 +146,41 @@
   border-color: #fff;
   box-shadow: 0 0 5px #000;
 }
-@media only screen and (max-width: 990px) {
+@media only screen and (max-width: 768px) {
   .box {
     margin-bottom: 30px;
   }
-  .box .box-card {
-    max-width: 100%;}
+  .box:after {
+    position: relative;
+  }
+  .box-card {
+    max-width: 100%;
+    height: 25em;}
+
   .box .box-content {
     position:inherit
   }
-}
-@media only screen and (max-width: 479px) {
+  .box-card img {
+
+    -ms-transform: initial;
+    transform: initial;
+    top: initial;
+  }
   .box .title {
-    font-size: 20px;
+    position: absolute;
+    bottom: 0%;
+    color: #fff;
+    width: -webkit-fill-available;
+    background: #337ab7;
+    padding: 10px;
+    margin: 0;
   }
-  .box .box-content {
-    position:inherit
+
+  .pict-frame {
+    min-height: initial;
   }
+  .pict-frame img {
+    display: initial;
+  }
+
 }
