--- a/bombay/myshop/templates/myshop/products/catalog-product-media.html
+++ b/bombay/myshop/templates/myshop/products/catalog-product-media.html
@@ -6,5 +6,5 @@
   right: 16px;"><em><strong>{{ product.discount }}</strong></em></h3>
 {% endifnotequal %}
 <div class="pict-frame">
-<img class="img-responsive" style="margin-top: 2em;" src="{{ thumb.url }}" width="{{ thumb.width }}" height="{{ thumb.height }}" srcset="{{ thumb.url }} 1x, {{ thumb2.url }} 2x" />
+<img class="img-responsive" style="margin-top: 2em; margin-left: auto; margin-right: auto;" src="{{ thumb.url }}" width="{{ thumb.width }}" height="{{ thumb.height }}" srcset="{{ thumb.url }} 1x, {{ thumb2.url }} 2x" />
 </div>
