--- a/bombay/myshop/templates/myshop/products/cart-product-media.html
+++ b/bombay/myshop/templates/myshop/products/cart-product-media.html
@@ -10,7 +10,7 @@
 </div>
 <div class="media-body">
 {% block media-body %}
-	<h4 class="media-heading"><a href="{{ product.get_absolute_url }}">{{ product.product_name }}</a></h4>
-	{{ product.caption|truncatewords_html:30 }}
+	<h4 class="media-heading"><a href="{{ product.get_absolute_url }}">{{ product.product_name|safe }}</a></h4>
+	{{ product.caption|safe|truncatewords_html:30 }}
 {% endblock %}
 </div>
