--- a/shop/templates/shop/catalog/product-gallery.html
+++ b/shop/templates/shop/catalog/product-gallery.html
@@ -13,8 +13,8 @@
 			<figure>
 				<a href="{{ product.product_url }}" class="text-center">
 					<div {% if ng %} ng-bind-html="product.media" {% endif %}>{{ product.media }}</div>
-					<div style="min-height: 5em;">
-						<h4>{{ product.product_name|safe }}</h4>
+					<div>
+						<p>{{ product.product_name|safe }}</p>
 					</div>
 				</a>
 				<figcaption>
