--- a/shop/templates/shop/templatetags/cart-icon.html
+++ b/shop/templates/shop/templatetags/cart-icon.html
@@ -16,7 +16,7 @@
 
 <script id="shop/carticon-caption.html" type="text/ng-template">
 {% block carticon-caption %}
-	<ng-pluralize count="caption.num_items" when="{'1': '{% trans "1 Item" context "cart icon" %}', 'other': '{% trans "{} Items" context "cart icon" %}'}"></ng-pluralize>
+	<ng-pluralize style="font-size: 0.7em;" ng-bind="caption.num_items"></ng-pluralize style>
 {% endblock %}
 </script>
 
