--- a/shop/templates/shop/catalog/product-figure.html
+++ b/shop/templates/shop/catalog/product-figure.html
@@ -1,7 +1,7 @@
 {# This template is shared between Django and AngularJS #}
 {% load i18n djng_tags %}
 {% angularjs ng %}
-<figure class="text-center">
+<figure class="text-center" style="height: 36em;">
 	<a href="{{ product.product_url }}" class="text-center">
 		<div {% if ng %} ng-bind-html="product.media"{% endif %}>{{ product.media }}</div>
 		<div style="min-height: 7em;">
