--- a/bombay/myshop/templates/myshop/catalog/clothes-add2cart.html
+++ b/bombay/myshop/templates/myshop/catalog/clothes-add2cart.html
@@ -37,9 +37,15 @@
 		</tr>
 		{% endif %}
 		<tr>
+			{% if product.availability != 'not_available' %}
 			<td colspan="2">
 				<button class="btn btn-primary btn-block" ng-click="addToCart('{% url 'shop:cart-list' %}')">{% trans "Add to cart" %}</button>
 			</td>
+			{% else%}
+			<td colspan="2">
+				<button class="btn btn-primary btn-block disabled">{% trans "Add to cart" %}</button>
+			</td>
+			{% endif %}
 		</tr>
 	</tbody>
 </table>
