--- a/bombay/myshop/templates/myshop/pages/base.html
+++ b/bombay/myshop/templates/myshop/pages/base.html
@@ -42,6 +42,7 @@ fbq('track', 'PageView');
 	{% block head %}{% endblock head %}
 	{% render_block "css" postprocessor "shop.sekizai_processors.compress" %}
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
+	<script src="http://www.openlayers.org/api/OpenLayers.js"></script>
 </head>
 
 {% addtoblock "js" %}<script src="{% static 'node_modules/picturefill/dist/picturefill.min.js' %}" type="text/javascript"></script>{% endaddtoblock %}
