--- a/bombay/myshop/templates/myshop/pages/footer.html
+++ b/bombay/myshop/templates/myshop/pages/footer.html
@@ -53,10 +53,7 @@
 
 		</div>
 	</div>
-	<div class="hidden-xs hidden-sm col-md-4 col-lg-4">
-		<div id="marker-name" style="display: none;">{% trans "Bombay - The Shop of color women's clothes." %}
-		</div>
-		<div id="map"></div>
+	<div id="mapdiv" class="hidden-xs hidden-sm col-md-4 col-lg-4" style="height: 235px;">
 	</div>
 	<div class="visible-xs visible-sm text-center"><h4 class="">2011-2019 bombayshop.com.ua</h4></div>
 </div>
@@ -64,6 +61,29 @@
 {% get_current_language as LANGUAGE_CODE %}
 {% addtoblock "js" %}
 <script src="{% static 'myshop/js/footer.js' %}" type="text/javascript"></script>
-<script async="async" defer="defer" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD71sHrtkZMnLqTbgRmY_NsO0A9l9BQmv4&callback=initMap&language={{ LANGUAGE_CODE }}"></script>
+
+  <script>
+    map = new OpenLayers.Map("mapdiv");
+    map.addLayer(new OpenLayers.Layer.OSM());
+
+    var lonLat = new OpenLayers.LonLat(24.030661, 49.836455)
+          .transform(
+            new OpenLayers.Projection("EPSG:4326"), // transform from WGS 1984
+            map.getProjectionObject() // to Spherical Mercator Projection
+          );
+	 var size = new OpenLayers.Size(70,35);
+	var offset = new OpenLayers.Pixel(-(size.w/2), -size.h);
+    var icon = new OpenLayers.Icon("{% static '/shop/bombay-shop-logo.png' %}",size);
+
+    var zoom=18;
+
+    var markers = new OpenLayers.Layer.Markers( "Markers" );
+    map.addLayer(markers);
+
+    markers.addMarker(new OpenLayers.Marker(lonLat, icon));
+
+    map.setCenter (lonLat, zoom);
+  </script>
+
 {% endaddtoblock %}
 {% endblock footer %}
