[01.07.20] Fixed Dockerfile, added dynamic year into footer, fixed migrations, removed email validation for guests

--- a/bombay/myshop/templates/myshop/pages/footer.html
+++ b/bombay/myshop/templates/myshop/pages/footer.html
@@ -24,7 +24,7 @@
 				</li>
 			</ul>
 		</div>
-		<h4 class="visible-md visible-lg"><br/>2011-2020 bombayshop.com.ua</h4>
+		<h4 class="visible-md visible-lg"><br/>2011-{% now 'Y' %} bombayshop.com.ua</h4>
 	</div>
 	<div class="col-sm-6 col-md-4 col-lg-4"> <!-- Contact us form -->
 		<!-- Button trigger modal -->
